--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-*,
+/**,
 *:after,
 *:before {
 	box-sizing: border-box;
@@ -11,7 +11,7 @@ html,body {
 
 
 
-.box {
+*/.box {
   height: 600px;
   background-color: #e7e7e7;
   border: 1px solid rgba(0,0,0,0.87);
@@ -32,7 +32,7 @@ html,body {
 
 #header {
   background-color: #4267b2;
-  height: 30px;
+  /*height: 30px;*/
 }
 
 .white-text {
@@ -73,7 +73,7 @@ p {
     display: none;
 }
 .header-image{
-  margin-top:15px;
+ margin-top:15px;
 height:25px;
 width:25px;
 margin-left:25px;
@@ -89,7 +89,11 @@ position:relative;
 top:-1px;
 }
 #serach-box{
-  height:34.50px;
+  /*height:34.50px;*/
+  width:400px;
+  position:relative;
+right:-7px;
+
 
 }
 
@@ -121,8 +125,9 @@ top:-1px;
   top:-10px;
 }
 .online-btn{
+
   float:right;
-  padding-top: 11px;
+  padding-top: -11px;
   
 }
 body{
@@ -136,6 +141,16 @@ body{
   width:100%;
   height:40px;
 }
+#ad-image{
+  margin-right: -25px;
+}
+.today{
+  padding: 4px;
+  border: 1px solid #e9ebee;
+  background-color: white;
+  border-radius: 5px;
+}
+
 
 
 
